# github-copilot-training

./: .prompt.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: unit-test.instructions.md
.github/prompts/: fix-type-errors.prompt.md
app/: main.py  models.py
tests/: conftest.py  pytest.py
tests/integration/: test_main_endpoints.py
tests/unit/: test_main.py
