[project]
name = "app"
version = "0.1.0"
description = "A FastAPI application for GitHub Copilot Training."
authors = []
license = "MIT"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "mypy>=1.18.2",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.21.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as integration",
]

[tool.uv]
default-groups = ["dev"] # Ensures dev group is installed by default during uv sync
